# Controle-de-Voo

./: .gitignore  CMakeLists.txt  ControleDeVoo.sln  README.md
ControleDeVoo/: ArvoreBinaria.c  ArvoreBinaria.h  BubbleSort.c  BubbleSort.h  ControleDeVoo.c  ControleDeVoo.h  ControleDeVoo.vcxproj  ControleDeVoo.vcxproj.filters  Main.c  QuickSort.c  QuickSort.h
ControleDeVoo/x64/Debug/: ControleDeVoo.exe.recipe  ControleDeVoo.ilk  vc143.idb
ControleDeVoo/x64/Debug/ControleDeVoo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ControleDeVoo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
